[reset] static site - project list

--- a/index.html
+++ b/index.html
@@ -7,6 +7,137 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
     <meta name="author" content="slugbyte@slugbyte.com" />
-  <link rel="shortcut icon" href="favicon.ico"><link href="bundle-358928e937bc83383c10.css" rel="stylesheet"></head>
-  <body><div id="root"></div><script type="text/javascript" src="bundle.358928e937bc83383c10.js"></script></body>
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="stylesheet" href="/main.css">
+  </head>
+  <body>
+    <main>
+    <h1>slugbyte's open-source projects </h1>
+      <nav>
+        <ul>
+          <li>
+            <h2>toy</h2>
+            <a href="https://slugbyte.github.io/toy">website</a>
+            <a class="title" href="https://www.github.com/slugbyte/toy">github</a>
+            <p>a small virtual machine and assembler that runs in browser.</p>
+            <ul class="tags">
+              <li>virtual machine</li>
+              <li>assembler</li>
+              <li>debugger</li>
+              <li>javascipt</li>
+              <li>webapp</li>
+            </ul>
+          </li>
+          <li>
+            <h2>unruly-worker</h2>
+            <a class="title" href="https://www.github.com/slugbyte/unruly-worker">github</a>
+            <p>A ridiculously fun alternative nvim keymap for the workman keyboard layout.</p>
+            <ul class="tags">
+              <li>nvim</li>
+              <li>lua</li>
+              <li>workman layout</li>
+            </ul>
+          </li>
+          <li>
+            <h2>blog</h2>
+            <a class="title" href="https://www.github.com/slugbyte/www.slugbyte.com">github</a>
+            <a href="https://www.slugbyte.com">website</a>
+            <p> Art, Audio, and Programming Portfolio + Blog </p>
+            <ul class="tags">
+              <li>blog</li>
+              <li>react</li>
+              <li>gatsby</li>
+              <li>javascipt</li>
+            </ul>
+          </li>
+          <li>
+            <h2>dotfiles</h2>
+            <a class="title" href="https://www.github.com/slugbyte/config">github</a>
+            <p> Scripts, Dot Files, Templates, and More.</p>
+            <ul class="tags">
+              <li>nvim</li>
+              <li>tmux</li>
+              <li>zsh</li>
+              <li>bash</li>
+              <li>cron</li>
+              <li>cli config</li>
+            </ul>
+          </li>
+          <li>
+            <h2>slugtina</h2>
+            <a href="https://slugbyte.github.io/slugtina">website</a>
+            <a class="title" href="https://www.github.com/slugbyte/slugtina">github</a>
+            <p>a tiny lil drawwing webapp written in vanilla js.</p>
+            <ul class="tags">
+              <li>javascipt</li>
+              <li>drawing</li>
+              <li>webapp</li>
+            </ul>
+          </li>
+          <li>
+            <h2>data-structures</h2>
+            <a class="title" href="https://www.github.com/slugbyte/data-structures">github</a>
+            <p> Generic data structure examples in Javascript.</p>
+            <ul class="tags">
+              <li>javascipt</li>
+              <li>data structure</li>
+              <li>computer science</li>
+            </ul>
+          </li>
+          <li>
+            <h2>stopwatch</h2>
+            <a class="title" href="https://www.github.com/slugbyte/stopwatch">github</a>
+            <p> A stopwatch that prints the number of seconds the proccess has been running on SIGINT.</p>
+            <ul class="tags">
+              <li>zig</li>
+              <li>cli</li>
+              <li>utility</li>
+            </ul>
+          </li>
+          <li>
+            <h2>under-construction</h2>
+            <a href="https://slugbyte.github.io/under-construction">website</a>
+            <a class="title" href="https://www.github.com/slugbyte/under-construction">github</a>
+            <p>under-construction websites made with diferent webdev strats</p>
+            <ul class="tags">
+              <li>clojure</li>
+              <li>zig</li>
+              <li>rust</li>
+              <li>bash</li>
+              <li>js</li>
+              <li>ts</li>
+              <li>sass</li>
+            </ul>
+          </li>
+          <li>
+            <h2>wet-nvim</h2>
+            <a class="title" href="https://www.github.com/slugbyte/wet-nvim">github</a>
+            <p> a dripping wet cool tone nvim theme.</p>
+            <ul class="tags">
+              <li>nvim</li>
+              <li>lua</li>
+              <li>colorscheme</li>
+              <li>wet</li>
+            </ul>
+          </li>
+          <li>
+            <h2>mold</h2>
+            <a class="title" href="https://www.github.com/slugbyte/mold">github</a>
+            <p> A CLI for managing dot files, shell scripts, executables, project scaffolds, and file templates. </p>
+            <ul class="tags">
+              <li>depricated</li>
+              <li>python</li>
+              <li>dotfile manager</li>
+              <li>sysconfig</li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+    </main>
+    <footer>
+      <nav>
+        <li><li/>
+      </nav>
+    </footer>
+  </body>
 </html>
