--- a/404.html
+++ b/404.html
@@ -7,6 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
     <meta name="author" content="slugbyte@slugbyte.com" />
-  <link rel="shortcut icon" href="favicon.ico"><link href="bundle-358928e937bc83383c10.css" rel="stylesheet"></head>
-  <body><div id="root"></div><script type="text/javascript" src="bundle.358928e937bc83383c10.js"></script></body>
+    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="stylesheet" href="404.css">
+  </head>
+  <body>
+    <main>
+      <h1>404 not found</h1>
+      <a href="/">GO TO HOMEPAGE</h1>
+    </main>
+  </body>
 </html>
